# xibao-langchain-discord-agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  MyLogger.py  README.md  RunXiBao.py  config.py  docker-compose.yml  main_api.py  main_bot.py  pyproject.toml
android/: .env.example  .gitignore  COMPILE.md  Dockerfile.build  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/xibao/devicesync/: ApiClient.kt  AppPrefs.kt  BootReceiver.kt  DataCollector.kt  DeviceSyncApp.kt  DeviceUploadWorker.kt  MainActivity.kt  NotificationCache.kt  ResponseModels.kt  SyncNotificationListenerService.kt
android/app/src/main/res/layout/: activity_main.xml  fragment_dashboard.xml  fragment_settings.xml
android/app/src/main/res/menu/: bottom_nav_menu.xml
android/app/src/main/res/navigation/: nav_graph.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
src/api/: server.py
src/core/: agent.py  model_factory.py  resource.py  session.py
src/db/: device_store.py
src/interface/: discord_bot.py
src/middleware/: agent_logging.py  context_middleware.py
src/skills/: infra.py
src/skills/discordEventsTools/: SKILL.md  tools.py
src/skills/imageTools/: SKILL.md  tools.py
src/skills/mobileTools/: SKILL.md  __init__.py  tools.py
src/skills/salaryTools/: 104_salary_data.csv  SKILL.md  tools.py
(+2 files in other folders)
